--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.datasource.password=Qaws1234!
 #spring.security.user.name=test
 #spring.security.user.password=Password1
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 #logging.level.org.springframework: DEBUG
 #logging.level.org.thymeleaf: DEBUG
