--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,14 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.11</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
