Spring Configuration Override File

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.datasource.password=Qaws1234!
 
 #logging.level.org.springframework: DEBUG
 #logging.level.org.thymeleaf: DEBUG
+
+flowable-rest-api.host=localhost
+flowable-rest-api.port=9090
+flowable-rest-api.protocol=http
