--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,13 @@
             <version>6.1.11</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.zalando/logbook-spring-boot-starter -->
+        <dependency>
+            <groupId>org.zalando</groupId>
+            <artifactId>logbook-spring-boot-starter</artifactId>
+            <version>3.9.0</version>
+        </dependency>
+
 
     </dependencies>
 
