--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
+#logging.level.root=DEBUG
+logging.level.org.springframework.web=TRACE
+logging.level.sun.net=TRACE
+
+# Set to TRACE to see the detail REQUEST and RESPONSE
+logging.level.org.zalando.logbook=OFF
+logbook.format.style=http
+logbook.filter.form-request-mode=BODY
+
+
 # Execute data.sql
 spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create
