--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,9 @@ spring.datasource.password=Qaws1234!
 flowable-rest-api.host=localhost
 flowable-rest-api.port=9090
 flowable-rest-api.protocol=http
+
+# AppEnvironment.class
+# Limit the number of record returned on executions query list
+app.environment.execution-maximum=2000
+# Limit the number of record returned on process-instances query list
+app.environment.process-maximum=2000
