Refactor maximun query return

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,6 +31,4 @@ flowable-rest-api.protocol=http
 
 # AppEnvironment.class
 # Limit the number of record returned on executions query list
-app.environment.execution-maximum=2000
-# Limit the number of record returned on process-instances query list
-app.environment.process-maximum=2000
+app.environment.query-max-records=2000
