Refactor /process-api and expose key properties to application.propertie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,10 +25,13 @@ spring.datasource.password=Qaws1234!
 #logging.level.org.springframework: DEBUG
 #logging.level.org.thymeleaf: DEBUG
 
-flowable-rest-api.host=localhost
-flowable-rest-api.port=9090
-flowable-rest-api.protocol=http
-
 # AppEnvironment.class
 # Limit the number of record returned on executions query list
 app.environment.query-max-records=2000
+
+# FlowableApiControllerConfig.class
+flowable.api.controller.host=localhost
+flowable.api.controller.protocol=http
+flowable.api.controller.port=9090
+flowable.api.controller.userinfo=
+flowable.api.controller.fragment=
